# rag_app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_app.sh  run_docker.sh
.github/: pr_template.md
.github/workflows/: build-docker-image.yml  python-app.yml
etc/: .env  minio.env
etc/postman/: sample_requests.json
etc/sample_files/: experiential_colearning.txt
src/: __init__.py  app.py
src/models/: requests.py  response.py
src/prompts/: query_prompt.txt
src/routers/: create_embeddings.py  query.py  upload.py
src/utils/: chain.py  clients.py  decorators.py  env.py  hashers.py  load_env.py  logger.py  minio.py
src/utils/middleware/: auth.py
tests/: conftest.py  test_create_embeddings.py  test_upload.py  test_utils.py
tests/etc/: test.env  test_missing.env
